--- a/OruBloggen/Views/Admin/Index.cshtml
+++ b/OruBloggen/Views/Admin/Index.cshtml
@@ -5,25 +5,63 @@
 }
 @if (Utility.isAdmin(User.Identity.GetUserId()))
 {
-    <h2>Admin Central</h2>
-    <div class="row">
-
-        <div class="col-md-4">
-            <h2>Inlägg</h2>
-            <p><a class="btn btn-default" href="/Admin/Posts">Gå till användare</a></p>
+    <h2>Admincentral</h2>
+    <div class="row adminView">
+        <div class="adminviewItem">
+            <h3 class="text-center" style="color:dimgrey;">Inlägg</h3>
+            <br />
+            <img class="center-block" src="/Icons/post.png" style="width:80px; height:auto;" />
+            <br />
+            <br />
+            <p><a class="btn btn-default center-block" href="/Admin/Posts">Hantera inlägg</a></p>
         </div>
 
-        <div class="col-md-4">
-            <h2>Användare</h2>
-            <p><a class="btn btn-default" href="/Admin/AllUsers">Gå till inlägg</a></p>
+        <div class="adminviewItem">
+            <h3 class="text-center" style="color:dimgrey;">Användare</h3>
+            <br />
+            <img class="center-block" src="/Icons/users.png" style="width:80px; height:auto;" />
+            <br />
+            <br />
+            <p><a class="btn btn-default center-block" href="/Admin/AllUsers">Hantera användare</a></p>
         </div>
 
-        <div class="col-md-4">
-            <h2>Anmälningar</h2>
-            <p><a class="btn btn-default" href="/Admin/ReportDetails">Gå till anmälningar</a></p>
+        <div class="adminviewItem">
+            <h3 class="text-center" style="color:dimgrey;">Anmälningar</h3>
+            <br />
+            <img class="center-block" src="/Icons/report.png" style="width:80px; height:auto;" />
+            <br />
+            <br />
+            <p><a class="btn btn-default center-block" href="/Admin/ReportDetails">(@Html.Action("CountReports", "Admin")) Hantera anmälningar</a></p>
         </div>
 
+        <div class="adminviewItem">
+            <h3 class="text-center" style="color:dimgrey;">Kategorier</h3>
+            <br />
+            <img class="center-block" src="/Icons/category.png" style="width:80px; height:auto;" />
+            <br />
+            <br />
+            <p><a class="btn btn-default center-block" href="/Admin/AdminCategories">Hantera kategorier</a></p>
+        </div>
+
+        <div class="adminviewItem">
+            <h3 class="text-center" style="color:dimgrey;">Användarförfrågningar</h3>
+            <br />
+            <img class="center-block" src="/Icons/request.png" style="width:80px; height:auto;" />
+            <br />
+            <br />
+            <p><a class="btn btn-default center-block" href="">Hantera användarförfrågningar</a></p>
+        </div>
+
+        <div class="adminviewItem">
+            <h3 class="text-center" style="color:dimgrey;">Nyheter</h3>
+            <br />
+            <img class="center-block" src="/Icons/news.png" style="width:80px; height:auto;" />
+            <br />
+            <br />
+            <p><a class="btn btn-default center-block" href="/Admin/AdminNews">Hantera nyheter</a></p>
+        </div>
     </div>
+
 }
 else
 {
