--- a/OruBloggen/Views/Home/Index.cshtml
+++ b/OruBloggen/Views/Home/Index.cshtml
@@ -1,4 +1,21 @@
-﻿
+﻿@model List<OruBloggen.Models.NewsModel>
+
 @{
     ViewBag.Title = "Home Page";
 }
+<body class="startpage">
+        <div style="text-align:center; margin-bottom:25%; margin-top:25%;">
+            <h1>Välkommen till OruBloggen</h1>
+        </div>
+
+        <div class="homeView">
+            @foreach(var news in Model)
+            {
+                <div class="homeViewItem">
+                    <h4>@news.NewsTitle</h4>
+                    <p>@news.NewsText</p>
+                    <p style="font-size:x-small;">@news.NewsDate</p>
+                </div>
+            }
+        </div>
+</body>
