--- a/OruBloggen/Views/MeetingCalendar/Index.cshtml
+++ b/OruBloggen/Views/MeetingCalendar/Index.cshtml
@@ -7,8 +7,6 @@
 <h2>Kalender</h2>
 <div id="calender"></div>
 
-
-
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -22,11 +20,13 @@
             <div class="modal-footer">
                 <button type="button" style="float:left;" id="meetingAccess" class="btn btn-default">Details</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-
             </div>
         </div>
     </div>
 </div>
+
+<input type="button" class="btn btn-default" style="float: right; margin-top: 10px;" value="Export iCal" 
+       onclick="location.href='@Url.Action("ExportToIcal", "MeetingCalendar")'" />
 
 <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.css" rel="stylesheet" />
 <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.print.css" rel="stylesheet" media="print" />
@@ -36,16 +36,15 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.js"></script>
 
     <script>
-
         $(document).ready(function () {
-
+            
             var events = [];
             $.ajax({
                 type: "GET",
                 url: "/MeetingCalendar/GetEvents",
                 dataType: 'json',
                 success: function (data) {
-                $.each(data, function (i, v) {
+                    $.each(data, function (i, v) {
                         events.push({
                             title: v.MeetingTitle,
                             description: v.MeetingDesc,
@@ -54,8 +53,8 @@
                             meetingID: v.MeetingID,
                             meetingCreator: v.MeetingCreator,
                             meetingActive: v.MeetingActive
-                    });
-                  })
+                        });
+                    })
                     GenerateCalender(events);
                 },
                 error: function (error) {
@@ -65,65 +64,67 @@
 
             function GenerateCalender(events) {
 
-                $('#calender').fullCalendar('destroy');
-                $('#calender').fullCalendar({
-                    contentHeight: 400,
-                    defaultDate: new Date(),
-                    timeFormat: 'HH:mm',
-                    header: {
-                        left: 'prev,next today',
-                        center: 'title',
-                        right: 'month,basicWeek,basicDay,agenda'
-                    },
-
-                    
-                    eventRender: function (event, element) {
-                        if (event.meetingActive) {
-                            element.css('background-color', '#008000');
-                            
-                        }
-                        else {
-                            element.css('background-color', '#808080');
-                            element.css('border-color', '#808080');
-                            element.css('opacity', '0.7');
-
-                        }
-                    },
- 
-                    events: events,
-                    eventClick: function (calEvent, jsEvent, view) {
-
-                        var currentMeetingID = calEvent.meetingID
-                        $.ajax({
-                            url: '/MeetingCalendar/ListMembers',
-                            type: "GET",
-                            dataType: "json",
-                            data: { meetingID: currentMeetingID },
-                            success: function (data) {
-                                memberlist = data;
-                            }
-                        })
-
-                        $('#myModal #eventTitle').text(calEvent.title);
-                        var $description = $('<div/>');
-                        $description.append($('<p/>').html('<b>Tid: </b>' + calEvent.start.format("HH:mm") + " - " + calEvent.end.format("HH:mm")));
-                        $description.append($('<p/>').html('<b>Beskrivning: </b>' + calEvent.description));
-                        $description.append($('<p/>').html('<b>Skapare: </b>' + calEvent.meetingCreator));
-                        $description.append($('<p/>').html('<b>Deltagare: </b>' + memberlist));
+            $('#calender').fullCalendar('destroy');
+            $('#calender').fullCalendar({
+            contentHeight: 400,
+            defaultDate: new Date(),
+            timeFormat: 'HH:mm',
+            header: {
+            left: 'prev,next today',
+            center: 'title',
+            right: 'month,basicWeek,basicDay,agenda'
+            },
 
 
-                        $('#myModal #pDetails').empty().html($description);
+            eventRender: function (event, element) {
+            if (event.meetingActive) {
+            element.css('background-color', '#008000');
 
-                        $('#myModal').modal();
-                        $(document)
-                        .on("click", "#meetingAccess", function () {
-                            var meetingID = calEvent.meetingID;
-                            location.href = '/Meeting/MeetingDetails/' + meetingID;
-                        });
-
-                    }
-                })
             }
-        })
+            else {
+            element.css('background-color', '#808080');
+            element.css('border-color', '#808080');
+            element.css('opacity', '0.7');
+
+            }
+            },
+
+            events: events,
+            eventClick: function (calEvent, jsEvent, view) {
+
+            var currentMeetingID = calEvent.meetingID
+            $.ajax({
+            url: '/MeetingCalendar/ListMembers',
+            type: "GET",
+            dataType: "json",
+            data: { meetingID: currentMeetingID },
+            success: function (data) {
+            memberlist = data;
+            }
+            })
+
+            $('#myModal #eventTitle').text(calEvent.title);
+            var $description = $('<div />');
+            $description.append($('<p />').html('<b>Tid: </b>' + calEvent.start.format("HH:mm") + " - " + calEvent.end.format("HH:mm")));
+            $description.append($('<p />').html('<b>Beskrivning: </b>' + calEvent.description));
+            $description.append($('<p />').html('<b>Skapare: </b>' + calEvent.meetingCreator));
+            $description.append($('<p />').html('<b>Deltagare: </b>' + memberlist));
+
+
+            $('#myModal #pDetails').empty().html($description);
+
+            $('#myModal').modal();
+            $(document)
+            .on("click", "#meetingAccess", function () {
+            var meetingID = calEvent.meetingID;
+            location.href = '/Meeting/MeetingDetails/' + meetingID;
+            });
+
+                }
+                })
+                }
+            })
     </script>
+
+    
 }
