Fixat följafunktionen med redirect

--- a/OruBloggen/Views/ProfilePage/showInfo.cshtml
+++ b/OruBloggen/Views/ProfilePage/showInfo.cshtml
@@ -62,17 +62,20 @@
                 <dd>
                     @Html.DisplayFor(model => model.Team)
                 </dd>
-                @if (Model.UserIsFollowed == "" )
+                @if (Model.userId != Model.FollowedID)
                 {
-                    <dd>
-                        <input type="button" value="Följ" onclick="location.href = '@Url.Action("FollowUser", "Following", new { followID = Model.FollowedID})'" />
-                    </dd>
-                }
-                else
-                {
-                    <dd>
-                        <input type="button" value="Avfölj" onclick="location.href = '@Url.Action("UnfollowUser", "Following", new { unfollowID = Model.FollowedID})'" />
-                    </dd>
+                    if (Model.UserIsFollowed == "")
+                    {
+                        <dd>
+                            <input type="button" value="Följ" onclick="location.href = '@Url.Action("FollowUser", "Following", new { followID = Model.FollowedID })'" />
+                        </dd>
+                    }
+                    else
+                    {
+                        <dd>
+                            <input type="button" value="Avfölj" onclick="location.href = '@Url.Action("UnfollowUser", "Following", new { unfollowID = Model.FollowedID })'" />
+                        </dd>
+                    }
                 }
 </dl>
         </div>
