--- a/OruBloggen/Views/Message/ShowMessages.cshtml
+++ b/OruBloggen/Views/Message/ShowMessages.cshtml
@@ -3,30 +3,39 @@
     ViewBag.Title = "ShowMessages";
 }
 
-<h2>ShowMessages</h2>
+<h2>Inkorg</h2>
 
 @using (Html.BeginForm("ShowMessages", "Messages", FormMethod.Post))
 {
     <link rel="stylesheet" type="text/css" href="~/Content/Site.css" />
-
-    foreach (var sender in Model.ListOfSenders)
+    if(Model.ListOfMessages.Count != 0)
     {
-            foreach (var item in Model.ListOfMessages)
-            {
-                if (sender.UserID == item.MessageSenderID)
-                {
+
+        //foreach (var sender in Model.ListOfSenders)
+        //{
+        foreach (var item in Model.ListOfMessages)
+        {
+            //if (sender.UserID == item.MessageSenderID)
+            ///*{*/
                 <div class="Mydiv divbutton">
                     <p><strong>Titel</strong>: @item.MessageTitle</p>
-                    <p><strong>Text</strong>: @item.MessageText</p>
+                    <p>@*<strong>Text</strong>:*@ @item.MessageText</p>
 
-                    <p><strong>Avsändare</strong>: @sender.UserFirstname @sender.UserLastname</p>
+                    @*<p><strong>Avsändare</strong>: @sender.UserFirstname @sender.UserLastname</p>*@
 
                     <button type="button" style="display:none" onclick="location.href ='@Url.Action("ReturnResponsePage", "Message", new { userId = item.MessageSenderID })'">Svara </button>
                 </div>
-                }
-            }
+                <br/>
+            //}
+            //}
+        }
     }
+    else
+    {
+        <h4>Du har inga meddelanden</h4>
 
+        @Html.ActionLink("Skicka nytt meddelande","Index", "Message")
+    }
 }
 
 
