--- a/OruBloggen/Content/Site.css
+++ b/OruBloggen/Content/Site.css
@@ -59,6 +59,7 @@ textarea {
     padding: 6px;
     box-shadow: 0px 0px 20px #888;
 }
+
 .hover tr:hover
 {
     background-color: #888;
@@ -95,6 +96,19 @@ textarea {
     background-color: white;
 
 }
+
+
+.postImgBlock {
+    text-align: center;
+}
+
+.postImg {
+    display: inline-block;
+    width: 25%;
+    height: 350px;
+    padding: 5px;
+}
+
 
 .startpage {
     background-image: url('/Icons/oru.jpg');
