--- a/OruBloggen/Content/bootstrap.css
+++ b/OruBloggen/Content/bootstrap.css
@@ -1439,11 +1439,12 @@ ol ol {
 }
 dl {
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 dt,
 dd {
   line-height: 1.42857143;
+  margin-top:3px;
 }
 dt {
   font-weight: bold;
