--- a/OruBloggen/Views/Message/ShowMessages.cshtml
+++ b/OruBloggen/Views/Message/ShowMessages.cshtml
@@ -4,37 +4,27 @@
 }
 
 <h2>Inkorg</h2>
-
+@Html.ActionLink("Skicka nytt meddelande", "Index", "Message")
 @using (Html.BeginForm("ShowMessages", "Messages", FormMethod.Post))
 {
     <link rel="stylesheet" type="text/css" href="~/Content/Site.css" />
-    if(Model.ListOfMessages.Count != 0)
+    if (Model.ListOfMessages.Count != 0)
     {
-
-        //foreach (var sender in Model.ListOfSenders)
-        //{
         foreach (var item in Model.ListOfMessages)
         {
-            //if (sender.UserID == item.MessageSenderID)
-            ///*{*/
-                <div class="Mydiv divbutton">
-                    <p><strong>Titel</strong>: @item.MessageTitle</p>
-                    <p>@*<strong>Text</strong>:*@ @item.MessageText</p>
+            <div class="Mydiv divbutton">
+                <p><strong>Titel</strong>: @item.MessageTitle</p>
+                <p>@item.MessageText</p>
 
-                    @*<p><strong>Avsändare</strong>: @sender.UserFirstname @sender.UserLastname</p>*@
-
-                    <button type="button" style="display:none" onclick="location.href ='@Url.Action("ReturnResponsePage", "Message", new { userId = item.MessageSenderID })'">Svara </button>
-                </div>
-                <br/>
-            //}
-            //}
+                <button type="button" style="display:none" onclick="location.href ='@Url.Action("ReturnResponsePage", "Message", new { userId = item.MessageSenderID })'">Svara </button>
+            </div>
+            <br />
         }
     }
     else
     {
         <h4>Du har inga meddelanden</h4>
 
-        @Html.ActionLink("Skicka nytt meddelande","Index", "Message")
     }
 }
 
