--- a/OruBloggen/Views/Shared/_LoginPartial.cshtml
+++ b/OruBloggen/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
 
 <ul class="nav navbar-nav navbar-right">
     <li>
-        @Html.ActionLink("Min profil", "ProfileReDirect", "ProfilePage")
+        @Html.ActionLink("Min profil", "ShowInfo", "ProfilePage")
     </li>
     <li>
         @Html.ActionLink("Inkorg: " + Html.Action("count", "message"), "ShowMessages", "Message")
