--- a/OruBloggen/Views/ProfilePage/showInfo.cshtml
+++ b/OruBloggen/Views/ProfilePage/showInfo.cshtml
@@ -174,6 +174,25 @@
     </div>
 }
 
+@if (User.Identity.GetUserId() == Model.OtherUserID)
+{
+    <div style="float:left;">
+        @using (Html.BeginForm("ChosenNotifications", "ChooseNotification", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            <h4 style="font-weight:bold;">Kategorier</h4>
+            foreach(var item in Model.ListCategories)
+            { 
+            <p>
+                @Html.CheckBoxFor(m => Model.FollowCategory, "true")
+            </p>
+            }
+
+            <input type="submit" id="submitBtn" class="btn btn-default" value="Ändra Notifikationer" />
+        }
+    </div>
+}
+
+
 @section scripts{
     <script>
         $("#submitBtn").click(function () {
