vet inte, merg grejern

--- a/OruBloggen/Views/ProfilePage/ShowInfo.cshtml
+++ b/OruBloggen/Views/ProfilePage/ShowInfo.cshtml
@@ -85,7 +85,7 @@
 {
 
     <div class="myMeetings" style="float:right; height:500px; width:80%;">
-        <h2>Dina möten</h2>
+        <h2>Mötesförfrågningar</h2>
 
         <p>
             @Html.ActionLink("Skapa nytt möte", "Meeting", "Meeting")
@@ -139,8 +139,79 @@
                         }
                     </td>
                     <td>
-                        @Html.ActionLink("Ställ in möte", "CancelMeeting",
-                             new { meetingId = item.MeetingID, title = item.MeetingModel.MeetingTitle, startDate = item.MeetingModel.MeetingStartDate })
+
+                        @if (item.AcceptedInvite)
+                        {
+                            @Html.ActionLink("'", "AcceptMeeting", new { meetingId = item.MeetingModel.MeetingID });
+                        }
+                        else
+                        {
+                            @Html.ActionLink("Acceptera", "AcceptMeeting", new { meetingId = item.MeetingModel.MeetingID});
+
+                        }
+                    </td>
+                </tr>
+            }
+
+        </table>
+
+        <h2>Kommande möten</h2>
+
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayName("Titel")
+                </th>
+                <th>
+                    @Html.DisplayName("Beskrivning")
+                </th>
+                <th>
+                    @Html.DisplayName("Startdatum")
+                </th>
+                <th>
+                    @Html.DisplayName("Slutdatum")
+                </th>
+            </tr>
+
+            @foreach (var item in Model.MeetingModels)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(model => item.MeetingTitle)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.MeetingDesc)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.MeetingStartDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.MeetingEndDate, new { type = "YYYY-MM-DD" })
+                    </td>
+                    <td>
+                        @if (item.MeetingActive)
+                        {
+                            if (DateTime.Now > item.MeetingStartDate && DateTime.Now < item.MeetingEndDate)
+                            {
+                                @Html.DisplayName("Pågående")
+                            }
+                            else
+                            {
+                                @Html.DisplayName("Kommande")
+                            }
+                        }
+                        else
+                        {
+                            @Html.DisplayName("Avslutat/Inställt")
+                        }
+                    </td>
+                    <td>
+                        @if(item.MeetingUserID == User.Identity.GetUserId())
+                        {
+                            
+                        @Html.ActionLink("Ställ in möte", "CancelMeeting", new { meetingId=item.MeetingID, title = item.MeetingTitle, startDate = item.MeetingStartDate })
+
+                        }
                     </td>
                 </tr>
             }
