--- a/OruBloggen/Content/Site.css
+++ b/OruBloggen/Content/Site.css
@@ -88,10 +88,13 @@ textarea {
 
 .homeViewItem {
     display: inline-block;
-    width: 25%;
+    width: 30%;
     margin: 15px;
     padding: 0px 15px;
     background-color: white;
+    border-radius: 5px;
+    border: solid 1px;
+    word-wrap:break-word;
 
 }
 
@@ -165,6 +168,16 @@ body > div.container.body-content > form > div > div:nth-child(8) {
 .followBtn{
     margin-bottom:12px;
     width: 70px;
+}
+
+.welcomeScreen{
+    display: inline-block;
+    margin-top: 50px;
+    background-color: white;
+    width: 60%;
+    height: 100px;
+    border: solid 1px;
+    border-radius: 5px;
 }
 
 
