--- a/OruBloggen/Views/Home/Index.cshtml
+++ b/OruBloggen/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 @{
     ViewBag.Title = "Home Page";
 }
-<body class="startpage">
-        <div style="text-align:center; margin-bottom:25%; margin-top:25%;">
-            <h1>Välkommen till OruBloggen</h1>
+<body class="startpage" style="text-align:center;">
+        <div class="welcomeScreen">
+            <h1 style="margin-top:25px; word-wrap:break-word;">Välkommen till OruBloggen</h1>
         </div>
 
         <div class="homeView">
