--- a/OruBloggen/Views/ProfilePage/ShowInfo.cshtml
+++ b/OruBloggen/Views/ProfilePage/ShowInfo.cshtml
@@ -29,7 +29,7 @@
         <dl style="float:left;">
 
             <dt>
-                @Html.DisplayNameFor(model => model.Firstname)
+                Förnamn
             </dt>
 
             <dd>
@@ -37,7 +37,7 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.Lastname)
+                Efternamn
             </dt>
 
             <dd>
@@ -45,7 +45,7 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.Position)
+                Befattning
             </dt>
 
             <dd>
@@ -54,7 +54,7 @@
 
 
             <dt>
-                @Html.DisplayNameFor(model => model.Email)
+                Epost
             </dt>
 
             <dd>
@@ -62,7 +62,7 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
+                Telefonnummer
             </dt>
 
             <dd>
@@ -70,7 +70,7 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.Team)
+                Arbetslag
             </dt>
 
             <dd>
