--- a/OruBloggen/Views/Account/Register.cshtml
+++ b/OruBloggen/Views/Account/Register.cshtml
@@ -3,14 +3,14 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>Skapa ett nytt konto.</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post,
     new { enctype = "multipart/form-data", @class = "form-horizontal", role = "form" }))
 
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
