--- a/OruBloggen/Views/ProfilePage/ShowInfo.cshtml
+++ b/OruBloggen/Views/ProfilePage/ShowInfo.cshtml
@@ -145,7 +145,7 @@
                             <td>
 
 
-                                @if (Model.userId == User.Identity.GetUserId())
+                                @if (Model.OtherUserID == User.Identity.GetUserId())
                                 {
                                 if (item.AcceptedInvite)
                                 {
