--- a/OruBloggen/Views/ProfilePage/ShowInfo.cshtml
+++ b/OruBloggen/Views/ProfilePage/ShowInfo.cshtml
@@ -12,10 +12,11 @@
     </div>
     <br />
 
-    if (Model.userId != Model.OtherUserID)
+    if (Model.userId != Model.FollowedID)
     {
         if (Model.UserIsFollowed == "")
         {
+
             <input type="button" class="followBtn" value="Följ" onclick="location.href = '@Url.Action("FollowUser", "Following", new { followID = Model.FollowedID })'" />
         }
         else
@@ -145,9 +146,8 @@
                             <td>
 
 
-                                @if (Model.OtherUserID == User.Identity.GetUserId())
-                                {
-                                if (item.AcceptedInvite)
+
+                                @if (item.AcceptedInvite)
                                 {
                                     @Html.ActionLink("'", "AcceptMeeting", new { meetingId = item.MeetingModel.MeetingID });
                                 }
@@ -156,7 +156,7 @@
                                     @Html.ActionLink("Acceptera", "AcceptMeeting", new { meetingId = item.MeetingModel.MeetingID });
 
                                 }
-                                }
+
                             </td>
                         </tr>
                     }
