Admin kan nu Aktivera nya användare.

--- a/OruBloggen/Views/Admin/Index.cshtml
+++ b/OruBloggen/Views/Admin/Index.cshtml
@@ -49,7 +49,7 @@
             <img class="center-block" src="/Icons/request.png" style="width:80px; height:auto;" />
             <br />
             <br />
-            <p><a class="btn btn-default center-block" href="">Hantera användarförfrågningar</a></p>
+            <p><a class="btn btn-default center-block" href="/Admin/ActivateUser">(@Html.Action("CountUnactivatedUsers", "Admin")) Hantera användarförfrågningar</a></p>
         </div>
 
         <div class="adminviewItem">
