--- a/OruBloggen/Views/Admin/Index.cshtml
+++ b/OruBloggen/Views/Admin/Index.cshtml
@@ -13,7 +13,7 @@
             <img class="center-block" src="/Icons/post.png" style="width:80px; height:auto;" />
             <br />
             <br />
-            <p><a class="btn btn-default center-block" href="/Admin/Posts">Hantera inlägg</a></p>
+            <p><a class="btn btn-default center-block" href="/Admin/AdminPosts">Hantera inlägg</a></p>
         </div>
 
         <div class="adminviewItem">
