--- a/OruBloggen/Views/Shared/_LoginPartial.cshtml
+++ b/OruBloggen/Views/Shared/_LoginPartial.cshtml
@@ -20,6 +20,9 @@
         @Html.ActionLink("Informella inlägg", "InformalPost", "Post")
     </li>
     <li>
+        @Html.ActionLink("Projekt", "Project", "Project")
+    </li>
+    <li>
         @Html.ActionLink("Möte", "Meeting", "Meeting")
     </li>
     <li>
