Text-align center

--- a/OruBloggen/Views/Admin/Index.cshtml
+++ b/OruBloggen/Views/Admin/Index.cshtml
@@ -5,7 +5,7 @@
 }
 @if (Utility.isAdmin(User.Identity.GetUserId()))
 {
-    <h2>Admincentral</h2>
+    <h2 style="text-align:center;">Admin Meny</h2>
     <div class="row adminView">
         <div class="adminviewItem">
             <h3 class="text-center" style="color:dimgrey;">Inlägg</h3>
