Flytta alla användare till partial

--- a/OruBloggen/Views/Shared/_LoginPartial.cshtml
+++ b/OruBloggen/Views/Shared/_LoginPartial.cshtml
@@ -11,6 +11,9 @@
         @Html.ActionLink("Min profil", "ShowInfo", "ProfilePage")
     </li>
     <li>
+        @Html.ActionLink("Alla användare", "ShowAllUsers", "AllUsers")
+    </li>
+    <li>
         @Html.ActionLink("Inkorg: " + Html.Action("count", "message"), "ShowMessages", "Message")
     </li>
     <li>
