--- a/OruBloggen/Views/Home/Index.cshtml
+++ b/OruBloggen/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <body class="startpage" style="text-align:center;">
         <div class="welcomeScreen">
-            <h1 style="margin-top:25px; word-wrap:break-word;">Välkommen till OruBloggen</h1>
+            <h1 style="margin-top:25px; word-wrap:break-word;">Välkommen till ORU Portalen</h1>
         </div>
 
         <div class="homeView">
